syntax = "proto3";

import "compass_mode.proto";
import "coordinates_format.proto";
import "theme.proto";
import "units.proto";

option java_package = "io.trewartha.positional.data.settings";
option java_outer_classname = "SettingsProto";

message Settings {
  CompassMode compass_mode = 1;
  CoordinatesFormat coordinates_format = 2;
  bool show_accuracies = 3;
  Theme theme = 4 ;
  Units units = 5;
}
