syntax = "proto3";

option java_package = "io.trewartha.positional.data.settings";
option java_outer_classname = "CompassModeProto";

enum CompassMode {
  TRUE_NORTH = 0;
  MAGNETIC_NORTH = 1;
}
